#282 set taget to JDK 1.8 but still test and compile with 1.8 and 11